--- a/index.html
+++ b/index.html
@@ -24,12 +24,18 @@
 
   <body>
     <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
+      <h1 class="display-3">Daily Work Calendar</h1>
+      <p class="lead">A simple calendar app for scheduling your work day!</p>
       <p id="currentDay" class="lead"></p>
     </header>
+
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="row timeblock" id="9A">
+        <div class="col-2 timestamp">9 AM</div>
+        <textarea class="col-8 taskinput"></textarea>
+        <button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
     </div>
     
     <!-- Script Link to .js file -->
