hover ability on saveBtn so it looks cooler and is more personalized to me, but html w bootstrap should be done as well as the nec CSS

--- a/index.html
+++ b/index.html
@@ -34,63 +34,63 @@
       <!-- 9 AM -->
       <div class="row timeblock" id="9A">
         <div class="col-2 timestamp">9 AM</div>
-        <textarea class="col-8 taskinput"></textarea>
+        <textarea class="col-8 textinput"></textarea>
         <button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <!-- 10 AM -->
       <div class="row timeblock" id="10A">
         <div class="col-2 timestamp">10 AM</div>
-        <textarea class="col-8 taskinput"></textarea>
+        <textarea class="col-8 textinput"></textarea>
         <button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <!-- 11 AM -->
       <div class="row timeblock" id="11A">
         <div class="col-2 timestamp">11 AM</div>
-        <textarea class="col-8 taskinput"></textarea>
+        <textarea class="col-8 textinput"></textarea>
         <button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <!-- 12 PM -->
       <div class="row timeblock" id="12P">
         <div class="col-2 timestamp">12 PM</div>
-        <textarea class="col-8 taskinput"></textarea>
+        <textarea class="col-8 textinput"></textarea>
         <button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <!-- 1 PM -->
       <div class="row timeblock" id="1P">
         <div class="col-2 timestamp">1 PM</div>
-        <textarea class="col-8 taskinput"></textarea>
+        <textarea class="col-8 textinput"></textarea>
         <button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <!-- 2 PM -->
       <div class="row timeblock" id="2P">
         <div class="col-2 timestamp">2 PM</div>
-        <textarea class="col-8 taskinput"></textarea>
+        <textarea class="col-8 textinput"></textarea>
         <button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <!-- 3 PM -->
       <div class="row timeblock" id="3P">
         <div class="col-2 timestamp">3 PM</div>
-        <textarea class="col-8 taskinput"></textarea>
+        <textarea class="col-8 textinput"></textarea>
         <button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <!-- 4 PM -->
       <div class="row timeblock" id="4P">
         <div class="col-2 timestamp">4 PM</div>
-        <textarea class="col-8 taskinput"></textarea>
+        <textarea class="col-8 textinput"></textarea>
         <button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
       </div>
 
       <!-- 5 PM -->
       <div class="row timeblock" id="5P">
         <div class="col-2 timestamp">5 PM</div>
-        <textarea class="col-8 taskinput"></textarea>
+        <textarea class="col-8 textinput"></textarea>
         <button class="col-2 saveBtn"><i class="fas fa-save"></i></button>
       </div>
     </div>
