--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header class="jumbotron">
       <h1 class="display-3">Daily Work Calendar</h1>
       <p class="lead">A simple calendar app for scheduling your work day!</p>
-      <p id="currentDay" class="lead"></p>
+      <p id="currentDay" class="lead">DATE</p>
     </header>
 
     <!-- Timeblocks from 9AM - 5PM go here -->
